Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI717.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long BASEADDR;
typedef unsigned long SUBFRMADDR;
typedef unsigned long SUPERFRMADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef struct
{
    USHORT subfrmopt;           //Driver writes message options
    USHORT subfrmact;           //Card writes message activity
    USHORT subfrmnum;           //Card writes subframe number
    USHORT subfrmwps;           //Card writes WPS
    union {
        ULONG  timestamp;       //Card writes timestamp
        ULONG  hitcount;        //Card writes hit count
    };
    ULONG  spfptr;              //Card writes superframe pointer
    USHORT data[8192];          //Card/User writes subframe data. Valid from 0 -> WPS-1. (Rcv/Xmt)
    ULONG  timestamph;          //Card writes extended timestamp
    USHORT extflag;             //Driver writes external trigger/sync control flags
    USHORT rsvd[13];            //Reserved
} SUBFRMFIELDS717;
typedef SUBFRMFIELDS717 * LPSUBFRMFIELDS717;
/**
*
*  BTI717 Driver functions.
*
**/

BTI717API ERRVAL __stdcall BTI717_ChClear(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_ChConfig(ULONG configval,INT channum,HCORE handleval);
BTI717API VOID __stdcall BTI717_ChGetCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTI717API ULONG __stdcall BTI717_ChGetInfo(USHORT infotype,INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChIs717(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChIsBiPhase(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChIsRcv(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChIsSelEnc(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChIsType(ULONG configval,INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChIsXmt(INT channum,HCORE handleval);
BTI717API VOID __stdcall BTI717_ChPause(INT channum,HCORE handleval);
BTI717API INT __stdcall BTI717_ChPauseCheck(INT channum,HCORE handleval);
BTI717API VOID __stdcall BTI717_ChResume(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChStart(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_ChStatus(LPUSHORT buf,INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_ChStop(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_ChSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_ChTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_ParamAmplitudeConfig(ULONG configval,USHORT dacval,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_ParamAmplitudeGet(LPUSHORT dacval,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmBlkRd(LPUSHORT databuf,INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmBlkWr(LPUSHORT databuf,INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmStatus(LPUSHORT buf,INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmWordConfig(ULONG configval,INT subframe,INT word,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmWordRd(LPUSHORT value,INT subframe,INT word,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmWordWr(USHORT value,INT subframe,INT word,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmConfig(INT count,INT framespersuperframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmCounterPos(INT subframe,INT word,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmCounterPosEx(INT subframe,INT word,INT msb,INT lsb,INT channum,HCORE handleval);
BTI717API SUPERFRMADDR __stdcall BTI717_SuperFrmDefine(INT subframe,INT word,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmWordConfig(ULONG configval,INT superfrmnum,SUPERFRMADDR superfrmaddr,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmWordRd(LPUSHORT value,INT superfrmnum,SUPERFRMADDR superfrmaddr,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmWordWr(USHORT value,INT superfrmnum,SUPERFRMADDR superfrmaddr,INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_SyncTest(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SyncValRd(LPINT syncword1,LPINT syncword2,LPINT syncword3,LPINT syncword4,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SyncValWr(INT syncword1,INT syncword2,INT syncword3,INT syncword4,INT channum,HCORE handleval);
/**
*
*  Internal functions used by the BTI717 Driver.
*
**/

BTI717API BASEADDR __stdcall BTI717_ChCreate(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_ChReset(INT channum,HCORE handleval);
BTI717API INT __stdcall BTI717_DllUsageCount(VOID);
BTI717API VOID __stdcall BTI717_GetChanCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTI717API BOOL __stdcall BTI717_IsBiPhaseChan(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_IsChan(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_IsRcvChan(INT channum,HCORE handleval);
BTI717API BOOL __stdcall BTI717_IsXmtChan(INT channum,HCORE handleval);
BTI717API SUBFRMADDR __stdcall BTI717_SubFrmAddr(INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmBlkRdEx(LPSUBFRMFIELDS717 subfrmdata,INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmBlkWrEx(LPSUBFRMFIELDS717 subfrmdata,INT subframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmCreate(ULONG configval,INT subframe,BASEADDR chanbase,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SubFrmReset(INT subframe,INT channum,HCORE handleval);
BTI717API BASEADDR __stdcall BTI717_SuperFrmBaseAddr(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmConfigEx(ULONG configval,INT count,INT framespersuperframe,INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SuperFrmReset(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_SyncValPtrInit(INT channum,HCORE handleval);
BTI717API ERRVAL __stdcall BTI717_TestProtocol(HCORE handleval);